s/ninja/make/ for external project

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,8 +15,8 @@ jobs:
     - name: Do build
       run: |
         mkdir build && cd build
-        cmake .. -GNinja -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang
-        ninja
+        cmake .. -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang
+        cmake --build .
     - name: test
       run: |
         cd build
