--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Install deps
       run: |
         apt-get update
-        apt-get install -y cmake clang libboost-math-dev ninja-build libpython3-dev python3-venv swig libgtest-dev libgmp-dev zlib1g-dev git
+        apt-get install -y cmake clang libboost-math-dev libboost-system-dev libpython3-dev swig libgtest-dev libgmp-dev zlib1g-dev git
     - name: Do build
       run: |
         mkdir build && cd build
