--- a/.github/workflows/build-macos.yaml
+++ b/.github/workflows/build-macos.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ver: ["@3.7", "@3.8"]
+        ver: ["@3.7", "@3.8", "@3.9"]
 
     steps:
     - uses: actions/checkout@v2
