--- a/py/pyproject.toml.in
+++ b/py/pyproject.toml.in
@@ -12,5 +12,5 @@ python = "^3.5"
 pytest = "^4.6"
 
 [build-system]
-requires = ["poetry>=0.12", "setuptools-cpp"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0", "setuptools-cpp"]
+build-backend = "poetry.core.masonry.api"
